# tree-sitter-sylmark

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sylmark.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sylmark/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSylmark/: sylmark.h
bindings/swift/TreeSitterSylmarkTests/: TreeSitterSylmarkTests.swift
imtest/: im.go
src/: grammar.json  node-types.json  parser.c
